[package]
name = "tasky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
rand = "0.8.5"
rusqlite = { version = "0.29.0", features = ["bundled"] }
time = "0.3.21"
